--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-.env
+.env.local
 
 # my notes
 src/services/services.md
+src/services/testService.js
