--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.1",
+    "eslint-config-next": "^14.2.11",
     "sass": "^1.77.1"
   }
 }
