--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^14.2.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-timer-hook": "^3.0.8"
   },
   "devDependencies": {
     "eslint": "^8",
