--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
       "never"
     ],
     "no-trailing-spaces": "warn",
-    "semi": ["warn", "never"]
+    "semi": ["warn", "never"],
+    "eslint-plugin-import/no-anonymous-default-export":"off"
   }
 }
